syntax = "proto3";

package proto.auth;

import "google/api/annotations.proto";
import "rpc_create_user.proto";
import "rpc_login_user.proto";
option go_package = "grpc_gateway_cleary_code/pb";

service SimpleBank {
  rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
      post: "/v1/create-user"
      body: "*"
    };
  }
  rpc LoginUser (LoginUserRequest) returns (LoginUserResponse) {
    option (google.api.http) = {
      post: "/v1/login-user"
      body: "*"
    };
  }
}

